# src/controllers/address.ts
@@ -1,5 +1,4 @@
 import express, { Router } from 'express';
-import User from '../models/User';
 import Wallet from '../models/Wallet';
 import ERROR_CODES from '../constant';
 import responseBuilder from '../utils/responseBuilder';
@@ -10,21 +9,22 @@ const router = Router();
 /**
  * Get wallet by wallet address and user id
  */
- router.get('/wallet/:address', async (req:express.Request, res:express.Response) => {
-  // #swagger.tags = ['Wallet']
-  // #swagger.description = 'Get wallet userId and walletId'
+ router.get('/address/:userId/:coin/:priority?', async (req:express.Request, res:express.Response) => {
+  // #swagger.tags = ['Address']
+  // #swagger.description = 'Get address from userId, coin and priority'
 
-  const address = req.params.address;
-  const userId = req.query.userId;
+  const userId = req.params.userId;
+  const coin = req.params.coin;
+  const priority = req.params.coin;
   let result = {};
 
   try {
     let data = {};
 
-    if(userId)
-      data = await Wallet.findOne({ wallet: address, userId: userId }).exec();
+    if(priority)
+      data = await Wallet.find({ userId: userId, coin : coin, main: true }).exec();
     else
-      data = await Wallet.findOne({ wallet: address }).exec();
+      data = await Wallet.find({ userId: userId, coin : coin }).exec();
 
     result = responseBuilder(data);
   } catch (error) {
@@ -93,3 +93,4 @@ GET _search
 }
 
 */
+
